--- a/packages/website/src/index.css
+++ b/packages/website/src/index.css
@@ -618,27 +618,18 @@ body {
   color: hsl(var(--foreground));
 }
 
-.container {
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 2rem;
-  padding-left: 2rem;
-}
-
-@media (min-width: 1400px) {
-  .container {
-    max-width: 1400px;
-  }
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
 
-.ml-6 {
-  margin-left: 1.5rem;
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.me-auto {
+  margin-inline-end: auto;
 }
 
 .flex {
@@ -661,11 +652,6 @@ body {
   height: 2.25rem;
 }
 
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
 .h-screen {
   height: 100vh;
 }
@@ -674,8 +660,8 @@ body {
   min-height: 6rem;
 }
 
-.min-h-\[calc\(100vh_-_12rem\)\] {
-  min-height: calc(100vh - 12rem);
+.min-h-\[calc\(100vh_-_6rem_-_92px\)\] {
+  min-height: calc(100vh - 6rem - 92px);
 }
 
 .w-10 {
@@ -694,6 +680,10 @@ body {
   flex: 1 1 0%;
 }
 
+.flex-grow-\[0\.2\] {
+  flex-grow: 0.2;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -704,10 +694,6 @@ body {
 
 .justify-center {
   justify-content: center;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .whitespace-nowrap {
@@ -730,11 +716,6 @@ body {
   background-color: hsl(var(--background));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-destructive {
   background-color: hsl(var(--destructive));
 }
@@ -747,11 +728,6 @@ body {
   background-color: hsl(var(--secondary));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -762,11 +738,6 @@ body {
   padding-right: 1rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -775,6 +746,25 @@ body {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.align-middle {
+  vertical-align: middle;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -796,11 +786,6 @@ body {
   font-weight: 500;
 }
 
-.text-black {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
 .text-destructive-foreground {
   color: hsl(var(--destructive-foreground));
 }
@@ -815,11 +800,6 @@ body {
 
 .text-secondary-foreground {
   color: hsl(var(--secondary-foreground));
-}
-
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline-offset-4 {
